EPMRPP-105684 || refactor launch deletion process